--- a/src/main/java/com/tonikelope/megabasterd/SettingsDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/SettingsDialog.form
@@ -1099,10 +1099,13 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="start_frozen_checkbox" min="-2" max="-2" attributes="0"/>
                                       <Component id="debug_file_checkbox" min="-2" max="-2" attributes="0"/>
-                                      <Component id="custom_chunks_dir_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="custom_chunks_dir_button" min="-2" max="-2" attributes="0"/>
+                                          <Component id="custom_chunks_dir_checkbox" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="custom_chunks_dir_button" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="165" max="-2" attributes="0"/>
                                           <Component id="custom_chunks_dir_current_label" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="rec_zoom_label" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -1141,12 +1144,12 @@
                               <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="custom_chunks_dir_checkbox" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="custom_chunks_dir_checkbox" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="custom_chunks_dir_button" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="custom_chunks_dir_current_label" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="custom_chunks_dir_current_label" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="mega_api_key_panel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -1578,6 +1581,9 @@
                   </Properties>
                 </Component>
                 <Container class="javax.swing.JPanel" name="mega_api_key_panel">
+                  <Properties>
+                    <Property name="opaque" type="boolean" value="false"/>
+                  </Properties>
 
                   <Layout>
                     <DimensionLayout dim="0">
@@ -1620,9 +1626,6 @@
                         <Property name="text" type="java.lang.String" value="MEGA API KEY:"/>
                         <Property name="doubleBuffered" type="boolean" value="true"/>
                       </Properties>
-                      <Events>
-                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mega_api_key_labelMouseClicked"/>
-                      </Events>
                     </Component>
                     <Component class="javax.swing.JTextField" name="mega_api_key">
                       <Properties>
@@ -1630,6 +1633,7 @@
                           <Font name="Dialog" size="18" style="0"/>
                         </Property>
                         <Property name="doubleBuffered" type="boolean" value="true"/>
+                        <Property name="enabled" type="boolean" value="false"/>
                       </Properties>
                       <AuxValues>
                         <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="mega_api_key.addMouseListener(new ContextMenuMouseListener());"/>
@@ -1640,16 +1644,16 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Dialog" size="14" style="1"/>
                         </Property>
+                        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="ff" green="0" red="0" type="rgb"/>
+                        </Property>
                         <Property name="horizontalAlignment" type="int" value="0"/>
-                        <Property name="text" type="java.lang.String" value="WARNING: USING MEGA API WITHOUT API KEY MAY VIOLATE ITS TERM OF USE. YOU SHOULD GET A KEY -&gt; https://mega.nz/sdk"/>
+                        <Property name="text" type="java.lang.String" value="MEGA API KEY IS NO LONGER REQUIRED (DISABLED)"/>
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                           <Color id="Cursor de Mano"/>
                         </Property>
                         <Property name="doubleBuffered" type="boolean" value="true"/>
                       </Properties>
-                      <Events>
-                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mega_api_key_warningMouseClicked"/>
-                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
