--- a/src/main/java/com/tonikelope/megabasterd/FolderLinkDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/FolderLinkDialog.form
@@ -27,25 +27,25 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="node_bar" max="32767" attributes="0"/>
-                  <Component id="link_detected_label" alignment="0" max="32767" attributes="0"/>
-                  <Component id="file_tree_scrollpane" alignment="0" max="32767" attributes="0"/>
-                  <Component id="total_space_label" alignment="0" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="link_detected_label" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="folder_link_label" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="restore_button" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="node_bar" alignment="0" max="32767" attributes="0"/>
+                  <Component id="file_tree_scrollpane" alignment="1" max="32767" attributes="0"/>
                   <Component id="warning_label" alignment="0" max="32767" attributes="0"/>
+                  <Component id="total_space_label" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="skip_rest_button" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="skip_button" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="dance_button" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="folder_link_label" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="restore_button" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -67,6 +67,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="node_bar" min="-2" pref="14" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="total_space_label" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" alignment="1" groupAlignment="3" attributes="0">
                       <Component id="skip_rest_button" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -74,8 +76,6 @@
                       <Component id="dance_button" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="total_space_label" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="warning_label" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   </Group>
