--- a/src/main/java/com/tonikelope/megabasterd/SettingsDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/SettingsDialog.form
@@ -38,7 +38,7 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="cancel_button" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="panel_tabs" alignment="0" pref="935" max="32767" attributes="0"/>
+                  <Component id="panel_tabs" alignment="0" pref="1194" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -48,7 +48,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="panel_tabs" pref="1226" max="32767" attributes="0"/>
+              <Component id="panel_tabs" pref="1082" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -134,10 +134,6 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="27" pref="27" max="-2" attributes="0"/>
-                                  <Component id="smart_proxy_settings" min="-2" max="-2" attributes="0"/>
-                              </Group>
                               <Component id="smart_proxy_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="max_downloads_label" min="-2" max="-2" attributes="0"/>
@@ -146,6 +142,18 @@
                               </Group>
                               <Component id="multi_slot_down_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
+                                  <Component id="change_download_dir_button" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="down_dir_label" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="default_dir_label" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="megacrypter_reverse_checkbox" min="-2" max="-2" attributes="0"/>
+                              <Component id="use_mega_account_down_checkbox" min="-2" max="-2" attributes="0"/>
+                              <Component id="verify_file_down_checkbox" min="-2" max="-2" attributes="0"/>
+                              <Component id="limit_download_speed_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="clipboardspy_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
                                   <EmptySpace min="21" pref="21" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="rec_download_slots_label" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -159,39 +167,22 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="use_mega_account_down_combobox" min="-2" pref="700" max="-2" attributes="0"/>
                                       </Group>
-                                  </Group>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="change_download_dir_button" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="down_dir_label" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="default_dir_label" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="megacrypter_reverse_checkbox" min="-2" max="-2" attributes="0"/>
-                              <Component id="use_mega_account_down_checkbox" min="-2" max="-2" attributes="0"/>
-                              <Component id="verify_file_down_checkbox" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="21" pref="21" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="megacrypter_reverse_warning_label" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" attributes="0">
                                           <Component id="megacrypter_reverse_port_label" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="megacrypter_reverse_port_spinner" min="-2" max="-2" attributes="0"/>
                                       </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="max_down_speed_label" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="max_down_speed_spinner" min="-2" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
-                              <Component id="limit_download_speed_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="21" pref="21" max="-2" attributes="0"/>
-                                  <Component id="max_down_speed_label" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="max_down_speed_spinner" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="clipboardspy_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="smart_proxy_settings" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="155" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -269,7 +260,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="16" style="2"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Note: if you want to download without using a MEGA PREMIUM account you SHOULD enable it. (Slots consume RAM, so use them moderately)."/>
+                    <Property name="text" type="java.lang.String" value="Note: slots consume resources, so use them moderately."/>
                     <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                 </Component>
@@ -488,17 +479,13 @@
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" attributes="0">
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="rec_smart_proxy_label1" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="custom_proxy_list_label" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="jScrollPane1" alignment="0" min="-2" pref="1151" max="-2" attributes="0"/>
-                                              <Component id="rec_smart_proxy_label" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="rec_smart_proxy_label2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="rec_smart_proxy_label1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="rec_smart_proxy_label" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="rec_smart_proxy_label2" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
                                                   <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -520,10 +507,12 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="force_smart_proxy_checkbox" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLabel7" max="32767" attributes="0"/>
                                   </Group>
+                                  <Component id="custom_proxy_list_label" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -731,7 +720,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                                   <Component id="max_up_speed_label" min="-2" max="-2" attributes="0"/>
@@ -753,10 +742,10 @@
                               <Component id="thumbnail_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="upload_log_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="upload_public_folder_checkbox" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="rec_upload_slots_label" alignment="0" pref="1003" max="32767" attributes="0"/>
-                              <Component id="public_folder_panel" alignment="0" max="32767" attributes="0"/>
+                              <Component id="public_folder_panel" alignment="0" min="-2" pref="1003" max="-2" attributes="0"/>
+                              <Component id="rec_upload_slots_label" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="187" pref="330" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -866,7 +855,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="16" style="2"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Note: slots consume RAM, so use them moderately."/>
+                    <Property name="text" type="java.lang.String" value="Note: slots consume resources, so use them moderately."/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JCheckBox" name="thumbnail_checkbox">
@@ -1004,7 +993,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="mega_accounts_scrollpane" pref="467" max="32767" attributes="0"/>
+                      <Component id="mega_accounts_scrollpane" pref="395" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="remove_mega_account_button" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -1014,7 +1003,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="elc_accounts_label" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="elc_accounts_scrollpane" pref="467" max="32767" attributes="0"/>
+                      <Component id="elc_accounts_scrollpane" pref="395" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="remove_elc_account_button" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -1300,7 +1289,7 @@
                                           <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="0" pref="409" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
