--- a/src/main/java/com/tonikelope/megabasterd/FileGrabberDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/FileGrabberDialog.form
@@ -88,7 +88,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="file_tree_scrollpane" alignment="0" pref="171" max="32767" attributes="0"/>
+              <Component id="file_tree_scrollpane" alignment="0" pref="165" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -329,7 +329,10 @@
     <Component class="javax.swing.JLabel" name="total_file_size_label">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="28" style="1"/>
+          <Font name="Dialog" size="32" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="[0 B]"/>
         <Property name="doubleBuffered" type="boolean" value="true"/>
